# Rhiza

./: .gitignore  EXTERNAL_INTEGRATIONS.md  LICENSE  LLM_INTEGRATION_SUMMARY.md  MFLUX_INTEGRATION_SUMMARY.md  MLX_KERNEL_INTEGRATION_SUMMARY.md  NESTED_COMMUNICATION_SUMMARY.md  PROJECT_STRUCTURE_AND_INTEGRATIONS.md  README.md  SYSTEM_ENHANCEMENT_SUMMARY.md  complete_parameters_guide.py  comprehensive_system_demo.py  debug_palm_slab_test.py  enhanced_llm_integration_demo.py  ml_integration_demo.py  nested_communication_demo.py  pyproject.toml  quick_component_test.py  requirements.txt  setup.py  working_system_demo.py
config/: mesh_config.json
docs/: DEPLOYMENT.md  INTEGRATION.md
src/mesh_core/: __init__.py  config_manager.py  context_learner.py  empathy_engine.py  intent_monitor.py  mesh_orchestrator.py  palm_slab.py  palm_slab_interface.py  palm_slab_simple.py  personal_agent.py  proactive_manager.py  sentient_mesh_bridge.py  truth_layer.py
src/mesh_core/alignment/: __init__.py  alignment_corrector.py  alignment_monitor.py  ethics_enforcer.py  value_alignment_tracker.py
src/mesh_core/axiom_integration/: __init__.py  axiom_mesh_bridge.py  axiom_processor.py  confidence_scorer.py  knowledge_validator.py  mock_axiom_server.py  truth_validator.py
src/mesh_core/communication/: __init__.py  message_router.py  nested_channels.py
src/mesh_core/consensus/: __init__.py  consensus_resolver.py  proposal_system.py  voting_engine.py
src/mesh_core/consent/: __init__.py  consent_manager.py  consent_validator.py  data_usage_tracker.py  privacy_controller.py
src/mesh_core/degradation/: __init__.py  degradation_manager.py  recovery_orchestrator.py  resource_prioritizer.py  service_fallback.py
src/mesh_core/explainability/: __init__.py  audit_trail_manager.py  decision_tracker.py  explanation_generator.py  transparency_manager.py
src/mesh_core/generational/: __init__.py  ethics_drift_detector.py  generational_bridging.py  longterm_ethics_monitor.py  value_preservation_system.py
tests/: FINAL_SYSTEM_COMPLETION_VALIDATION.py  __init__.py  system_validation_report.py  test_advanced_weight_management.py  test_complete_palm_slab_integration.py  test_llm_integration.py  test_llm_integration_simple.py  test_mlx_kernel_optimizations.py  test_nested_communication.py
(+111 files in other folders)
